--- a/components/table/web-component/table-caption.scss
+++ b/components/table/web-component/table-caption.scss
@@ -9,4 +9,6 @@
   @include utrecht-table__caption;
 
   display: table-caption;
+  page-break-after: avoid;
+  page-break-inside: avoid;
 }
